@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-08-23T08:20:20Z",
+  "timestamp" : "2022-08-23T16:21:23Z",
   "count_outdated" : 302,
   "uniques_outdated" : 152,
-  "count" : 322,
-  "uniques" : 168,
+  "count" : 321,
+  "uniques" : 167,
   "clones" : [
     {
       "timestamp": "2022-08-09T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
