@@ -1,11 +1,11 @@
 {
-  "count": 20,
+  "count": 19,
   "uniques": 11,
   "clones": [
     {
       "timestamp": "2022-08-09T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-08-12T00:00:00Z",
